--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.3.2</version>
-		<relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
 	</parent>
 	<groupId>io.egargo</groupId>
 	<artifactId>jwt</artifactId>
@@ -81,13 +81,8 @@
 		<dependency>
 			<groupId>io.vavr</groupId>
 			<artifactId>vavr</artifactId>
-			<version>0.10.4</version> 
+			<version>0.10.4</version>
 		</dependency>
-
-		<!-- <dependency> -->
-		<!-- 	<groupId>org.springframework.boot</groupId> -->
-		<!-- 	<artifactId>spring-boot-starter-security</artifactId> -->
-		<!-- </dependency> -->
 	</dependencies>
 
 	<build>
