feat: refactored code, strategy pattern implemented

--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,12 @@
 			<groupId>io.vavr</groupId>
 			<artifactId>vavr</artifactId>
 			<version>0.10.4</version>
-		</dependency>
+        </dependency>
+        <dependency>
+            <groupId>at.favre.lib</groupId>
+            <artifactId>bcrypt</artifactId>
+            <version>0.10.2</version>
+        </dependency>
 	</dependencies>
 
 	<build>
